update(color): input now is displayed offscreen to maybe fix the color input on mobile

--- a/style/module.css
+++ b/style/module.css
@@ -509,7 +509,10 @@ input[type="file"]::file-selector-button {
 }
 
 .color-input input[type="color"] {
-  display: none;
+  position: fixed;
+  opacity: 0;
+  left: -1000px;
+  top: -1000px;
 }
 
 /* Styles for range inputs (I hate range inputs so much) */
